@@ -1115,9 +1115,9 @@ netdev_afxdp_batch_send(struct netdev *netdev, int qid,
     struct netdev_linux *dev;
     int ret;
 
+    qid = qid % netdev_n_txq(netdev);
     if (concurrent_txq) {
         dev = netdev_linux_cast(netdev);
-        qid = qid % netdev_n_txq(netdev);
 
         ovs_spin_lock(&dev->tx_locks[qid].lock);
         ret = __netdev_afxdp_batch_send(netdev, qid, batch);
